- fixed caps convention in names (first always caps) - remowed unnecessary lang-specific names (identical with the general one) - fixed X Window System name (in general and pl Comments) - added some descriptions in Comment fields
Changed files:
    wmsvencd.desktop -> 1.4

--- a/wmsvencd.desktop
+++ b/wmsvencd.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=wmSvencd
+Name=WmSvencd
 Comment=Yet Another CD PLayer with CDDB for Window Maker
 Comment[pl]=Kolejny odtwarzacz CD pod Window Makera z obsługą CDDB
 Exec=wmsvencd
