- s/^Terminal=0/Terminal=false/ s/^Terminal=1/Terminal=true/ to conform   freedesktop.org desktop-entry specification
Changed files:
    wmsvencd.desktop -> 1.6

--- a/wmsvencd.desktop
+++ b/wmsvencd.desktop
@@ -3,7 +3,7 @@ Name=WmSvencd
 Comment=Yet Another CD PLayer with CDDB for Window Maker
 Comment[pl]=Kolejny odtwarzacz CD pod Window Makera z obsługą CDDB
 Exec=wmsvencd
-Terminal=0
+Terminal=false
 Type=Application
 Encoding=UTF-8
 # vi: encoding=utf-8
